--- a/package.json
+++ b/package.json
@@ -13,16 +13,26 @@
     "build:windows": "tauri build --target aarch64-pc-windows-msvc"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@tauri-apps/api": "^1.5.0",
+    "antd": "^5.10.0",
+    "classnames": "^2.3.2",
+    "css-loader": "^6.8.1",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "moment": "^2.29.4",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tauri-apps/api": "^1.5.0"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.4",
-    "@tauri-apps/cli": "^1.5.0"
+    "vite": "^4.4.4"
   }
 }
